# magictax

./: Cargo.toml  README.md  TODO  justfile
src/: file_dialog.rs  lib.rs  main.rs
src/app/: methods.rs  mod.rs  render.rs
src/csv/: mod.rs  tests.rs
src/export/: mod.rs  tests.rs
src/export/template/: index.hbs  style.css
src/file/: mod.rs  tests.rs
tests/: io.rs
