[package]
name = "magictax"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.21.3"
tracing-subscriber = "0.3.16"
rfd = "0.11.3"
dirs-next = "2.0.0"
cocoon = "0.3.2"
handlebars = "4.3.7"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }
minify-html = "0.11.1"
